Agregar .gitignore e implementacion de librerías node

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@google/genai": "^1.21.0"
+  }
 }
