(fix): Correción de librerias npm

--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "mentoria-",
+  "name": "mentorIA-backend",
   "version": "1.0.0",
-  "description": "MentorIA – Plataforma de Aprendizaje Adaptativo con IA Descripción",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "description": "Backend de MentorIA con Node.js y Express",
+  "main": "src/backend/server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/backend/server.js",
+    "dev": "nodemon src/backend/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@google/genai": "^1.21.0"
+    "@google/genai": "^1.21.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
