--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
-    "markdown-it": "^14.1.0",
+    "marked": "^16.3.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
