--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.21.0",
+    "bcryptjs": "^3.0.2",
+    "better-sqlite3": "^12.4.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
