--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node src/backend/server.js",
-    "dev": "nodemon src/backend/server.js"
+    "dev": "nodemon src/backend/server.js",
+    "build-css": "npx @tailwindcss/cli@latest -i ./src/input.css -o ./src/frontend/css/style.css --watch",
+    "build-css-prod": "npx @tailwindcss/cli@latest -i ./src/input.css -o ./src/frontend/css/style.css --minify",
+    "dev:full": "concurrently \"npm run build-css\" \"npm run dev\""
   },
   "dependencies": {
     "@google/genai": "^1.21.0",
@@ -20,6 +23,10 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
   }
 }
