--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node src/backend/server.js",
     "dev": "nodemon src/backend/server.js",
-    "build-css": "npx @tailwindcss/cli@latest -i ./src/input.css -o ./src/frontend/css/style.css --watch",
-    "build-css-prod": "npx @tailwindcss/cli@latest -i ./src/input.css -o ./src/frontend/css/style.css --minify",
+    "build-css": "npx @tailwindcss/cli@latest -i ./src/frontend/css/input.css -o ./src/frontend/css/style.css --watch",
+    "build-css-prod": "npx @tailwindcss/cli@latest -i ./src/frontend/css/input.css -o ./src/frontend/css/style.css --minify",
     "dev:full": "concurrently \"npm run build-css\" \"npm run dev\""
   },
   "dependencies": {
